--- a/docs/config.json
+++ b/docs/config.json
@@ -9,14 +9,21 @@
       "moved": 2
     },
     {
-      "quadrant": 3,
+      "quadrant": 2,
       "ring": 0,
       "label": "Metaview",
       "active": true,
       "moved": 2
     },
     {
-      "quadrant": 3,
+      "quadrant": 2,
+      "ring": 1,
+      "label": "Synthesia AI",
+      "active": true,
+      "moved": 2
+    },
+    {
+      "quadrant": 2,
       "ring": 0,
       "label": "Fireflies",
       "active": true,
@@ -253,70 +260,70 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 0,
       "label": "AWS CloudFormation",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 0,
       "label": "AWS CloudFront",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 1,
       "label": "AWS Elemental MediaConvert",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 1,
       "label": "AWS Lambda",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 2,
       "label": "AWS Service Catalog",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 1,
       "label": "AWS Step Functions",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 2,
       "label": "Amazon Bedrock",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 2,
       "label": "Amazon Pinpoint",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 0,
       "label": "Amazon SageMaker",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 0,
       "label": "Docker",
       "link": "https://engineering.zalando.com/tags/docker.html",
@@ -324,21 +331,21 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 2,
       "label": "GraalVM",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 2,
       "label": "Kotlin Multiplatform",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 0,
       "label": "Kubernetes",
       "link": "https://engineering.zalando.com/tags/kubernetes.html",
@@ -346,49 +353,49 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 1,
       "label": "Open Policy Agent",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 0,
       "label": "OpenTelemetry",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 0,
       "label": "Skipper",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 2,
       "label": "Slurm",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 1,
       "label": "WebAssembly",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 1,
       "ring": 0,
       "label": "ZMON",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 3,
       "label": "Clojure",
       "link": "https://engineering.zalando.com/tags/clojure.html",
@@ -396,14 +403,14 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 1,
       "label": "Dart",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 0,
       "label": "Go",
       "link": "https://engineering.zalando.com/tags/golang.html",
@@ -411,7 +418,7 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 0,
       "label": "GraphQL",
       "link": "https://engineering.zalando.com/tags/graphql.html",
@@ -419,7 +426,7 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 3,
       "label": "Haskell",
       "link": "https://engineering.zalando.com/tags/haskell.html",
@@ -427,7 +434,7 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 0,
       "label": "Java",
       "link": "https://engineering.zalando.com/tags/java.html",
@@ -435,7 +442,7 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 0,
       "label": "JavaScript",
       "link": "https://engineering.zalando.com/tags/javascript.html",
@@ -443,7 +450,7 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 0,
       "label": "Kotlin",
       "link": "https://engineering.zalando.com/tags/kotlin.html",
@@ -451,7 +458,7 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 0,
       "label": "OpenAPI (Swagger)",
       "link": "https://engineering.zalando.com/tags/openapi.html",
@@ -459,7 +466,7 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 0,
       "label": "Python",
       "link": "https://engineering.zalando.com/tags/python.html",
@@ -467,14 +474,14 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 2,
       "label": "R",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 3,
       "label": "Rust",
       "link": "https://engineering.zalando.com/tags/rust.html",
@@ -482,7 +489,7 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 0,
       "label": "Scala",
       "link": "https://engineering.zalando.com/tags/scala.html",
@@ -490,7 +497,7 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 0,
       "label": "Swift",
       "link": "https://engineering.zalando.com/tags/swift.html",
@@ -498,7 +505,7 @@
       "moved": 0
     },
     {
-      "quadrant": 2,
+      "quadrant": 0,
       "ring": 0,
       "label": "TypeScript",
       "link": "https://engineering.zalando.com/tags/typescript.html",
@@ -527,26 +534,28 @@
       "moved": 0
     },
     {
-      "quadrant": 1,
+      "quadrant": 3,
       "ring": 0,
-      "label": "Rice Framework",
+      "label": "Kafka",
+      "link": "https://engineering.zalando.com/tags/apache-kafka.html",
       "active": true,
-      "moved": 2
+      "moved": 0
     },
     {
-      "quadrant": 1,
+      "quadrant": 3,
       "ring": 0,
-      "label": "Implementation Framework",
+      "label": "Nakadi",
+      "link": "https://nakadi.io",
       "active": true,
-      "moved": 2
+      "moved": 0
     },
     {
-      "quadrant": 1,
-      "ring": 0,
-      "label": "Project Management Framework",
+      "quadrant": 3,
+      "ring": 1,
+      "label": "RabbitMQ",
       "link": "https://engineering.zalando.com/tags/rabbitmq.html",
       "active": true,
-      "moved": 2
+      "moved": 0
     }
   ]
 }
