--- a/docs/config.json
+++ b/docs/config.json
@@ -432,6 +432,7 @@
       "quadrant": 1,
       "ring": 0,
       "label": "Project Management Framework",
+      "link": "https://engineering.zalando.com/tags/rabbitmq.html",
       "active": true,
       "moved": 2
     }
