--- a/docs/config.json
+++ b/docs/config.json
@@ -6,21 +6,21 @@
       "ring": 0,
       "label": "Pinpoint",
       "active": true,
-      "moved": 2
+      "moved": 0
     },
     {
       "quadrant": 2,
       "ring": 0,
       "label": "PoppAI",
       "active": true,
-      "moved": 2
+      "moved": 0
     },
     {
       "quadrant": 2,
       "ring": 0,
       "label": "HireSweet",
       "active": true,
-      "moved": 2
+      "moved": 0
     },
     {
       "quadrant": 2,
@@ -34,28 +34,28 @@
       "ring": 0,
       "label": "Hubspot",
       "active": true,
-      "moved": 2
+      "moved": 0
     },
     {
       "quadrant": 2,
       "ring": 0,
       "label": "Lattice",
       "active": true,
-      "moved": 2
+      "moved": o
     },
     {
       "quadrant": 2,
       "ring": 0,
       "label": "Workamp",
       "active": true,
-      "moved": 2
+      "moved": 0
     },
     {
       "quadrant": 2,
       "ring": 0,
       "label": "Hibob",
       "active": true,
-      "moved": 2
+      "moved": 0
     },
     {
       "quadrant": 2,
