--- a/docs/config.json
+++ b/docs/config.json
@@ -41,7 +41,7 @@
       "ring": 0,
       "label": "Lattice",
       "active": true,
-      "moved": o
+      "moved": 0
     },
     {
       "quadrant": 2,
