--- a/docs/config.json
+++ b/docs/config.json
@@ -283,111 +283,108 @@
     },
     {
       "quadrant": 3,
-      "ring": 1,
-      "label": "AWS Step Functions",
+      "ring": 3,
+      "label": "Asana",
       "active": true,
-      "moved": 0
+      "moved": 2
     },
     {
       "quadrant": 3,
-      "ring": 2,
-      "label": "Amazon Bedrock",
+      "ring": 3,
+      "label": "Granola.ai",
       "active": true,
-      "moved": 0
+      "moved": 2
     },
     {
       "quadrant": 3,
-      "ring": 2,
-      "label": "Amazon Pinpoint",
+      "ring": 3,
+      "label": "Fetcher.ai",
       "active": true,
-      "moved": 0
+      "moved": 2
+    },
+    {
+      "quadrant": 3,
+      "ring": 3,
+      "label": "HireVue",
+      "active": true,
+      "moved": 2
+    },
+    {
+      "quadrant": 3,
+      "ring": 3,
+      "label": "Interview.Prep.ai",
+      "active": true,
+      "moved": 2
+    },
+    {
+      "quadrant": 3,
+      "ring": 3,
+      "label": "Candidate.fyi",
+      "active": true,
+      "moved": 2
+    },
+    {
+      "quadrant": 3,
+      "ring": 3,
+      "label": "Huru.ai",
+      "active": true,
+      "moved": 2
+    },
+    {
+      "quadrant": 3,
+      "ring": 3,
+      "label": "Paradox.ai",
+      "active": true,
+      "moved": 2
+    },
+    {
+      "quadrant": 3,
+      "ring": 3,
+      "label": "Storydoc",
+      "active": true,
+      "moved": 2
+    },
+    {
+      "quadrant": 3,
+      "ring": 3,
+      "label": "Pitch",
+      "active": true,
+      "moved": 2
+    },
+    {
+      "quadrant": 3,
+      "ring": 3,
+      "label": "Juro",
+      "active": true,
+      "moved": 2
+    },
+    {
+      "quadrant": 3,
+      "ring": 3,
+      "label": "Test Partnerships",
+      "active": true,
+      "moved": 2
+    },
+    {
+      "quadrant": 3,
+      "ring": 3,
+      "label": "DISC",
+      "active": true,
+      "moved": 2
     },
     {
       "quadrant": 3,
       "ring": 0,
-      "label": "Amazon SageMaker",
-      "active": true,
-      "moved": 0
-    },
-    {
-      "quadrant": 3,
-      "ring": 0,
-      "label": "Docker",
-      "link": "https://engineering.zalando.com/tags/docker.html",
-      "active": true,
-      "moved": 0
-    },
-    {
-      "quadrant": 3,
-      "ring": 2,
-      "label": "GraalVM",
-      "active": true,
-      "moved": 0
-    },
-    {
-      "quadrant": 3,
-      "ring": 2,
-      "label": "Kotlin Multiplatform",
-      "active": true,
-      "moved": 0
-    },
-    {
-      "quadrant": 3,
-      "ring": 0,
-      "label": "Kubernetes",
-      "link": "https://engineering.zalando.com/tags/kubernetes.html",
-      "active": true,
-      "moved": 0
-    },
-    {
-      "quadrant": 3,
-      "ring": 1,
-      "label": "Open Policy Agent",
-      "active": true,
-      "moved": 0
-    },
-    {
-      "quadrant": 3,
-      "ring": 0,
-      "label": "OpenTelemetry",
-      "active": true,
-      "moved": 0
-    },
-    {
-      "quadrant": 3,
-      "ring": 0,
-      "label": "Skipper",
-      "active": true,
-      "moved": 0
-    },
-    {
-      "quadrant": 3,
-      "ring": 2,
-      "label": "Slurm",
-      "active": true,
-      "moved": 0
-    },
-    {
-      "quadrant": 3,
-      "ring": 1,
-      "label": "WebAssembly",
-      "active": true,
-      "moved": 0
-    },
-    {
-      "quadrant": 3,
-      "ring": 0,
-      "label": "ZMON",
+      "label": "Miro",
       "active": true,
       "moved": 0
     },
     {
       "quadrant": 3,
       "ring": 3,
-      "label": "Clojure",
-      "link": "https://engineering.zalando.com/tags/clojure.html",
+      "label": "TestGorillas",
       "active": true,
-      "moved": 0
+      "moved": 2
     },
     {
       "quadrant": 3,
