--- a/docs/config.json
+++ b/docs/config.json
@@ -214,7 +214,7 @@
     {
       "quadrant": 3,
       "ring": 0,
-      "label": "Innternal Chatbot (Stan)",
+      "label": "Internal Chatbot (Stan)",
       "active": true,
       "moved": 0
     },
