--- a/docs/config.json
+++ b/docs/config.json
@@ -46,7 +46,7 @@
     {
       "quadrant": 3,
       "ring": 0,
-      "label": "Workamp",
+      "label": "Workramp",
       "active": true,
       "moved": 0
     },
@@ -256,7 +256,7 @@
     {
       "quadrant": 3,
       "ring": 0,
-      "label": " Aracade",
+      "label": " Arcade",
       "active": true,
       "moved": 0
     },
