--- a/.github/ISSUE_TEMPLATE/new_technology.yml
+++ b/.github/ISSUE_TEMPLATE/new_technology.yml
@@ -1,15 +1,14 @@
 name: New Technology Request
-description: |
-  # Request to add documentation for a new technology
-  
-  Hi! Thank you for taking the time to add a new technology!
-  
-  Completing this form will automatically create a Pull Request (PR) to add this technology to our repository.
-
+description: Request to add a new technology
 title: "Add technology ..."
 labels: ["documentation", "new-technology"]
 
 body:
+  - type: markdown
+    attributes:
+      value: |
+        Completing this form will automatically create a Pull Request (PR) to add this technology to our repository.
+        Thanks for your contribution!
   - type: input
     id: technology_name
     attributes:
