Change Pro to Pros in the issue tempalte to match the Cons label

--- a/.github/ISSUE_TEMPLATE/new_technology.yml
+++ b/.github/ISSUE_TEMPLATE/new_technology.yml
@@ -52,7 +52,7 @@ body:
       value: |
         Please provide a concise description of the technology that explains its purpose and key features for someone unfamiliar with it.
 
-        ## Pro
+        ## Pros
         * list of advantages of this technology
 
         ## Cons
