PLT-0 add vanta to adopt ring under tools (#13)
* :PLT-0 add .yarnrc to pin Yarn Classic version for consistent local builds

* PLT-0 regenerate yarn.lock for Yarn Classic

* PLT-0 update .gitignore for Yarn Classic and build artifacts

* PLT-0 add Vanta to adopt ring under tools quadrant

* Update vanta.md

* :PLT-0 unignore .csj file

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
 node_modules/
 .DS_Store
 .idea/
+dist/
 
 # yarn
 yarn-error.log
+.yarn/*
+!.yarn/releases/
+!.yarn/releases/*.cjs
+.yarnrc.yml
+.pnp.*
+
+#tech radar build output
 .techradar
 build/
