--- a/docs/config.json
+++ b/docs/config.json
@@ -4,7 +4,7 @@
     {
       "quadrant": 3,
       "ring": 1,
-      "label": "AWS Athena",
+      "label": "One-cloud",
       "active": true,
       "moved": 0
     },
